# ircstatus

./: .gitignore  Makefile.am  README.md  bootstrap  configure.ac  ircstatus.c
po/: POTFILES.in  es.po
